<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".UnirseLaboratorio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100pt"
            android:background="#142050"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="30dp">

            <ImageView
                android:layout_width="115dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/tubo"
                android:tint="@color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/Fatext"
                android:textSize="23sp"
                android:textColor="@color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Fatext1"
                android:textColor="@color/gris"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Fatext2"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/Fatext3"
            android:gravity="center"
            android:textColor="@color/gris2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:background="@drawable/edittext_redondo2"
            android:hint="Ingresa código"
            android:paddingEnd="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/Fatext4"
            android:backgroundTint="@color/Azul"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/Fatext5"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>